# smart-dumbbell

./: dir.txt  tree.txt  新建 Microsoft Word 文档.docx
.github/ISSUE_TEMPLATE/: config.yml
BMM150_SensorAPI-master/examples/common/: common.c
BMM150_SensorAPI-master/examples/high_threshold/: Makefile
BMM150_SensorAPI-master/examples/low_threshold/: Makefile
BMM150_SensorAPI-master/examples/mag_drdy_interrupt/: Makefile
bmi270/: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  idf_component.yml
bmi270/bmi270_examples/common/: common.c  common.h
bmi270/bmi270_max_fifo_examples/aux_fifo_full_header_mode/: Makefile
bmi270/test_apps/: CMakeLists.txt
bmi270/test_apps/main/: Kconfig.projbuild  bmi270_test.c  idf_component.yml
components/bmi270/: CMakeLists.txt  bmi2.h
components/bmi270/port/: bmi270_esp32_port.c  bmi270_esp32_port.h
components/bmm150/: CMakeLists.txt
components/bmm150/port/: bmm150_esp32_port.c  bmm150_esp32_port.h
main/: CMakeLists.txt  application.cc  application.h  db_connect.cc  db_connect.h  http_client.cc  http_client.h  idf_component.yml  main.cc  mcp_server.cc  mcp_server.h  motion_task.cc  post.cc  remote_data_service.cc  remote_data_service.h  rep_scorer.h  websocket_srv.c  websocket_srv.cc  websocket_srv.h
main/boards/common/: board.h
main/display/: display.cc  display.h  lcd_display.cc  lcd_display.h
partitions/v1/: single_factory.csv
peripherals/: bmi270_sensor.cc  bmi270_sensor.h  bmm150_sensor.cc  bmm150_sensor.h  bosch_i2c_adapter.cc  bosch_i2c_adapter.h
peripherals/bosch/: bmi2.c  bmi270.c  bmi270.h
(+2 files in other folders)
